[package]
name = "tikv-client-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = "0.1.0"
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros" ] }
clap = "2.32"
